Move snooze to alert
